# declarative-models

./: .gitignore  Cargo.toml  README.md
examples/: coal.yml  cone.yml  cylinder.yml  icosphere.yml  triangle.yml  water-wheel.yml
models/: bear.yml  boar.yml  box.yml  coal.yml  cube.yml  cylinder.yml  human.yml  icosphere.yml  tree.yml  triangle.yml  uv-sphere.yml  water-wheel.yml
src/: geometry.rs  geometry_buffer.rs  gltf.rs  main.rs  model.rs
src/geometry/: cone.rs  cube.rs  cylinder.rs  deform.rs  icosphere.rs  uv_sphere.rs
