[package]
name = "declarative-models"
version = "0.1.0"
authors = ["Silas Nordgren <nordgrensilas@gmail.com>"]
edition = "2018"

[profile.dev]
incremental = true
opt-level = 2

[dependencies]
base64 = "0.13.0"
bytemuck = "1.5.1"
glam = "0.15.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
